--- a/stash/src/global.css
+++ b/stash/src/global.css
@@ -685,6 +685,62 @@
   box-shadow: 0px 0px 8px #070707;
 }
 
+.logincontainer {
+  width: 100vw;
+  height: 100vh;
+  display: grid;
+  place-items: center;
+}
+.logincontainer .login-btn {
+  width: 400px;
+  max-width: 85%;
+  padding: 20px;
+  height: 350px;
+  border: solid 1px black;
+  font-family: var(--font-logo);
+  text-align: center;
+}
+.logincontainer .login-btn h3 {
+  color: var(--off-red);
+  font-weight: 300;
+  font-size: 1.7rem;
+}
+.logincontainer .login-btn h4 {
+  font-weight: 100;
+  color: #333;
+  font-size: 0.9rem;
+}
+.logincontainer .login-btn .btn {
+  cursor: pointer;
+  width: 80%;
+  height: 50px;
+  margin: 40px auto;
+  padding: 10px 40px;
+  font-weight: 300;
+  display: flex;
+  justify-content: space-between;
+  flex-wrap: wrap;
+  align-items: center;
+  font-family: var(--font-display);
+  font-size: 1.2rem;
+  border-radius: 1px;
+  background-color: #fff;
+  box-shadow: 0px 0px 4px black;
+  transition: background-color 300ms, color 300ms;
+}
+.logincontainer .login-btn .btn svg {
+  width: 27px;
+  height: 27px;
+  transition: 300ms;
+}
+.logincontainer .login-btn .btn:hover {
+  background-color: var(--off-red);
+  color: white;
+}
+.logincontainer .login-btn .btn:hover svg {
+  color: white;
+}
+
 *,
 *::after,
 *::before {
@@ -708,10 +764,15 @@
 
 body {
   min-height: 100vh;
+  min-width: 100vw;
+}
+body .App {
+  min-width: 100vw;
+  min-height: 100vh;
 }
 body .loadingspinner {
   width: 100%;
-  height: 100%;
+  height: 100vh;
   display: flex;
   justify-content: center;
   align-items: center;
