--- a/stash/src/global.scss
+++ b/stash/src/global.scss
@@ -2,7 +2,7 @@
 //navbar
 // @import './components/navbar/navbar';
 //stashesOverview
-@import './components/stashesOverview/stashesOverview';
+
 @import './components/login';
 
 //sass --watch src/global.scss:src/global.css
@@ -81,6 +81,7 @@ body {
     .App {
         min-width: 100vw;
         min-height: 100vh;
+        @import './components/stashesOverview/stashesOverview.scss';
     }
     //the genarl stash loading spinner
     & .loadingspinner {
