--- a/stash/src/global.css
+++ b/stash/src/global.css
@@ -50,7 +50,6 @@
 }
 .stashesOverview .stashstorage .filterform {
   position: sticky;
-  cursor: alias;
   top: 15px;
   width: 84%;
   height: 90px;
@@ -81,11 +80,11 @@
   padding: 6rem;
 }
 .stashesOverview .stashstorage .filterform .addnewitem {
-  cursor: cursor;
-  font-size: 1.8rem;
-  padding: 0.3rem;
+  cursor: pointer;
+  font-size: 1.4rem;
+  padding: 0.4rem;
   font-family: var(--font-display);
-  font-weight: 400;
+  font-weight: 300;
   background-color: var(--off-red);
 }
 .stashesOverview .stashstorage .storage-itemsContainer {
@@ -733,7 +732,6 @@
 }
 .stashesOverview .stashstorage .filterform {
   position: sticky;
-  cursor: alias;
   top: 15px;
   width: 84%;
   height: 90px;
@@ -764,11 +762,11 @@
   padding: 6rem;
 }
 .stashesOverview .stashstorage .filterform .addnewitem {
-  cursor: cursor;
-  font-size: 1.8rem;
-  padding: 0.3rem;
+  cursor: pointer;
+  font-size: 1.4rem;
+  padding: 0.4rem;
   font-family: var(--font-display);
-  font-weight: 400;
+  font-weight: 300;
   background-color: var(--off-red);
 }
 .stashesOverview .stashstorage .storage-itemsContainer {
