--- a/stash/src/components/stashesOverview/stashesOverview-components/StOv-storage/_itemsLayout.scss
+++ b/stash/src/components/stashesOverview/stashesOverview-components/StOv-storage/_itemsLayout.scss
@@ -1,6 +1,7 @@
 .storage-itemsContainer {
     margin: 0 auto;
     width: 90%;
+    max-width: 1800px;
     display: grid;
     grid-template-columns: repeat(4, 1fr);
     padding: 10px 0px;
@@ -65,6 +66,7 @@
                 line-height: 1rem;
                 font-weight: 400;
                 font-size: 1.1rem;
+                word-break: break-all;
                 @include mq--tablet() {
                     font-size: 1rem;
                 }
